--- a/hammers/emacs/bootstrap.org
+++ b/hammers/emacs/bootstrap.org
@@ -41,24 +41,25 @@
        (message "Your Emacs is old, and some functionality in this config will be disabled. Please upgrade if possible."))
    #+END_SRC
 
-** 系统变量配置
-   #+HEADER: :var xdg.conf.d=(or (and (boundp 'm/xdg.conf.d) (file-directory-p m/xdg.conf.d) m/xdg.conf.d) (directory-file-name (expand-file-name "~/.config")))
-   #+HEADER: :var xdg.cache.d=(or (and (boundp 'm/xdg.cache.d) (file-directory-p m/xdg.cache.d) m/xdg.cache.d) (directory-file-name (expand-file-name "~/.cache")))
-   #+HEADER: :var xdg.data.d=(or (and (boundp 'm/xdg.data.d) (file-directory-p m/xdg.data.d) m/xdg.data.d) (directory-file-name (expand-file-name "~/.local/share")))
-   #+HEADER: :var home.d=(or (and (boundp 'm/home.d) (file-directory-p m/home.d) m/home.d) (directory-file-name (expand-file-name "~")))
+** 操作系统类型
    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/init.el") :comments link
      (defconst m/os
        (let ((os (symbol-name system-type)))
          (cond ((string= os "darwin") 'macos)
                ((string-prefix-p "gnu" os) 'linux)
                ((or (string-prefix-p "ms" os) (string-prefix-p "windows" os)) 'windows))))
+   #+END_SRC
 
-     (defvar m/xdg.conf.d xdg.conf.d)
-     (defvar m/xdg.cache.d xdg.cache.d)
-     (defvar m/xdg.data.d xdg.data.d)
-     (defvar m/home.d home.d)
-     (defvar m/emacs.d (expand-file-name "emacs" m/xdg.conf.d))
-     (defvar m/mail.d (expand-file-name "mails" m/home.d))
+
+** 系统变量配置
+   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/init.el") :comments link
+     (defconst m/home.d (directory-file-name (expand-file-name "~")))
+     (defconst m/xdg.conf.d (expand-file-name ".config" m/home.d))
+     (defconst m/xdg.cached.d (expand-file-name ".cache" m/home.d))
+     (defconst m/xdg.data.d (expand-file-name ".local/share" m/home.d))
+     (defconst m/xdg.state.d (expand-file-name ".local/state" m/home.d))
+     (defconst m/emacs.d (expand-file-name "emacs" m/xdg.conf.d))
+     (defconst m/mail.d (expand-file-name "mails" m/home.d))
    #+END_SRC
 
    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/init.el") :comments link
